# mini-agent

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/cli/: mod.rs
src/context/: mod.rs
src/llm/: claude.rs  mod.rs  openai.rs
src/mcp/: google_mcp.rs  mcp.json  mod.rs
src/session/: mod.rs
src/subagent/: mod.rs
src/tool/: mod.rs
