[package]
name = "mini-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.56", features = ["derive"] }
colored = "3.1.1"
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.29"
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["json"] }
rustyline = { version = "17.0.2", features = ["custom-bindings"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.24.0"

[[bin]]
name = "google_mcp"
path = "src/mcp/google_mcp.rs"
